# hgengine3

./: .gitattributes  .gitignore  CMakeLists.txt  ConsoleApplication1.cpp  ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters  FileWatch.h  Gravity.h  GravityTest.c  HgElement.c  HgElement.h  HgInput.c  HgInput.h  HgMath.c  HgMath.h  HgModel.c  HgModel.h  HgRenderQueue.c  HgRenderQueue.cpp  HgRenderQueue.h  HgScene.c  HgScene.h  HgShader.c  HgShader.h  HgTypes.h  HgVbo.c  HgVbo.h  Mercury3 Solution.sln  Mercury3.vcxproj  OglRenderPackets.c  OglRenderPackets.cpp  Projectile.c  Projectile.h  README.md  VoxelGrid.c  VoxelGrid.h  Win32Window.cpp  Win32Window.h  basic_light1_v.glsl  cube.c  (+21 more)
HgPlayground/: CMakeLists.txt  HgPlayground.cpp  HgPlayground.vcxproj  HgPlayground.vcxproj.filters
Licenses/: Opengl.txt
Mercury3/: AssetManager.h  CMakeLists.txt  Callback.h  DoubleBuffer.h  FileWatch.c  FileWatch.h  Gravity.h  GravityTest.c  GravityTest.cpp  HgCamera.c  HgCamera.cpp  HgCamera.h  HgElement.c  HgElement.cpp  HgElement.h  HgEntity.cpp  HgEntity.h  HgInput.cpp  HgInput.h  HgMath.c  HgMath.cpp  HgMath.h  HgModel.c  HgModel.cpp  HgModel.h  HgRenderQueue.cpp  HgRenderQueue.h  HgScene.c  HgScene.cpp  HgScene.h  HgShader.c  HgShader.cpp  HgShader.h  HgTexture.cpp  HgTexture.h  HgTypes.h  HgVbo.c  HgVbo.cpp  HgVbo.h  LinkedList.c  (+61 more)
Mercury3/HgSound/: Emitter.cpp  Emitter.h  HgSoundDriver.cpp  HgSoundDriver.h  HgSoundDriver_libsoundio.cpp  HgSoundDriver_libsoundio.h  HgSoundDriver_xaudio2.cpp  HgSoundDriver_xaudio2.h  IAudioSource.h  OggSource.cpp  OggSource.h  PlayingSound.cpp  PlayingSound.h  SoundAsset.cpp  SoundAsset.h  WavSource.cpp  WavSource.h
Mercury3/assets/shaders/: FontShader.frag  FontShader.vert  grid.frag  grid.vert  tbn_visual.vert
Mercury3/include/vectorial/: mat4f.h  vec2f.h  vec3f.h  vec4f.h
Mercury3/lib/libsoundio/i686/: soundio.lib
Mercury3/lib/libsoundio/x86_64/: soundio.lib
Mercury3/lib/x64/vorbis/lib/: vorbis.lib  vorbisenc.lib  vorbisfile.lib
Mercury3/scripts/: blenderExport.py  objFormatter.py
Mercury3/src/: ConditionalWait.h  FileWatch.cpp  FileWatch.h  HgEngine.cpp  HgEngine.h  HgFreetype.cpp  HgFreetype.h  HgGPUBuffer.cpp  HgGPUBuffer.h  HgTimer.cpp  HgTimer.h  HgUtils.cpp  HgUtils.h  HgVboMemory.h  IUpdatable.h  IniLoader.cpp  IniLoader.h  InstancedCollection.h  Material.cpp  Material.h  MeshMath.cpp  MeshMath.h  OGLBackend.cpp  OGLBackend.h  OGLvbo.cpp  OGLvbo.h  OpenVr.cpp  OpenVr.h  PointCloud.cpp  PointCloud.h  RenderBackend.cpp  RenderBackend.h  RenderData.cpp  RenderData.h  StringConversions.h  SwissArray.h  TBNVisualization.cpp  TBNVisualization.h  UpdatableCollection.h
Mercury3/src/OGL/: GLBuffer.cpp  GLBuffer.h  OGLGpuBuffer.cpp  OGLGpuBuffer.h  OGLheaders.h  VertexAttributeBuffer.cpp  VertexAttributeBuffer.h
Mercury3/src/core/: DataOrientedCollection.h  EntityIdType.cpp  EntityIdType.h  EntityTable.cpp  EntityTable.h  Enumerations.h  EventSystem.cpp  EventSystem.h  HgScene2.cpp  HgScene2.h  Instancing.h  Logging.cpp  Logging.h  RefCounterTable.h  TransformManager.cpp  TransformManager.h  spi.h
Mercury3/src/datastructures/: GuardedType.h  OrderedVector.h  ProtectedVector.h  SwissArray.h
Mercury3/src/math/: MatrixMath.cpp  MatrixMath.h  matrix.h  vector.h
Mercury3/src/renderer/: GpuBufferId.cpp  GpuBufferId.h  IFramebuffer.h  IRenderTarget.h  OGLBackend.cpp  OGLBackend.h  OGLFramebuffer.cpp  OGLFramebuffer.h  OGLvbo.cpp  OGLvbo.h  OpenVRRenderTarget.cpp  OpenVRRenderTarget.h  RenderBackend.cpp  RenderBackend.h  RenderData.cpp  RenderData.h  StereoCrossEyeTarget.cpp  StereoCrossEyeTarget.h  WindowRenderTarget.cpp  WindowRenderTarget.h
Tests/: CMakeLists.txt  EntityTests.cpp  Tests.vcxproj  Tests.vcxproj.filters  main.cpp  math_tests.cpp  quaternion_tests.cpp  vector_math_tests.cpp
scripts/: objFormatter.py
